--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fish in my aquarium</title>
+    <title>Fishes in my aquarium</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
