Updated HTML structure

--- a/index.html
+++ b/index.html
@@ -20,64 +20,31 @@
                 <div class="fish">
                     <img src="https://cf.ltkcdn.net/small-pets/images/std/246148-1600x1177-GettyImages-1050490488.jpg"
                         alt="Gold Fish Swimming">
-
-                    <p class="fish__species">
-                        Species: GolfFish
-                    </p>
-                    <p class="fish__length">
-                        Length: 3 inches
-                    </p>
-                    <p class="fish__name">
-                        Name: Bobby Boy
-                    </p>
-                    <p class="fish__location">
-                        Location: Gulf of Mexico
-                    </p>
-                    <p class="fish__diet">
-                        Diet: Loves Hot Cheetos
-                    </p>
+                    <p class="fish__species">Species: GolfFish</p>
+                    <p class="fish__length">Length: 3 inches</p>
+                    <p class="fish__name">Name: Bobby Boy</p>
+                    <p class="fish__location">Location: Gulf of Mexico</p>
+                    <p class="fish__diet">Diet: Loves Hot Cheetos</p>
                 </div>
                 <div class="fish">
                     <img src="https://cf.ltkcdn.net/small-pets/images/std/246148-1600x1177-GettyImages-1050490488.jpg"
                         alt="Gold Fish Swimming">
-
-                    <p class="fish__species">
-                        Species: GolfFish
-                    </p>
-                    <p class="fish__length">
-                        Length: 3 inches
-                    </p>
-                    <p class="fish__name">
-                        Name: Bobby Boy
-                    </p>
-                    <p class="fish__location">
-                        Location: Gulf of Mexico
-                    </p>
-                    <p class="fish__diet">
-                        Diet: Loves Hot Cheetos
-                    </p>
+                    <p class="fish__species">Species: GolfFish</p>
+                    <p class="fish__length">Length: 3 inches</p>
+                    <p class="fish__name">Name: Bobby Boy</p>
+                    <p class="fish__location">Location: Gulf of Mexico</p>
+                    <p class="fish__diet">Diet: Loves Hot Cheetos</p>
                 </div>
                 <div class="fish">
                     <img src="https://cf.ltkcdn.net/small-pets/images/std/246148-1600x1177-GettyImages-1050490488.jpg"
                         alt="Gold Fish Swimming">
-
-                    <p class="fish__species">
-                        Species: GolfFish
-                    </p>
-                    <p class="fish__length">
-                        Length: 3 inches
-                    </p>
-                    <p class="fish__name">
-                        Name: Bobby Boy
-                    </p>
-                    <p class="fish__location">
-                        Location: Gulf of Mexico
-                    </p>
-                    <p class="fish__diet">
-                        Diet: Loves Hot Cheetos
-                    </p>
+                    <p class="fish__species">Species: GolfFish</p>
+                    <p class="fish__length">Length: 3 inches</p>
+                    <p class="fish__name">Name: Bobby Boy</p>
+                    <p class="fish__location">Location: Gulf of Mexico</p>
+                    <p class="fish__diet">Diet: Loves Hot Cheetos</p>
                 </div>
-
+                
             </section>
 
             <article class="travel-list">
