Added Header Image

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Fishes in my aquarium</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
-
+<!-- 
+    Body Starts here
+ -->
 <body>
+    
     <header>
-        <h1>Fish in my aquarium</h1>
+        <img id="oceanPic" src="ocean.jpg" alt="Ocean View">
     </header>
+
+    <h1>Fish in my aquarium</h1>
 
     <main>
         <div class="left">
