--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
         <div class="contentContainer">
             <div class="contentContainer__left"></div>
-            <aside class="tipsList contentContainer__right"></aside>
+            <aside class="tipsList contentContainer__right">
+                <h3>This is the tips section</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum obcaecati tempora repellat assumenda, culpa voluptatibus possimus libero enim non modi reprehenderit quas ullam repellendus officia eius provident placeat iusto voluptate?</p>
+            </aside>
         </div>
 
     </main>
