Created sub folders for fish, tips and locations. Also imported into main.js both fish and tips sub folder and automated the tips section with JS.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
         <div class="contentContainer">
             <div class="contentContainer__left"></div>
             <aside class="tipsList contentContainer__right">
-                <h3>This is the tips section</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum obcaecati tempora repellat assumenda, culpa voluptatibus possimus libero enim non modi reprehenderit quas ullam repellendus officia eius provident placeat iusto voluptate?</p>
+                
             </aside>
+        </div>
+
+        <div class="locations">
+            <section>
+                <h3>This will be the section about he places I've travelled.</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo atque quidem culpa, iure expedita autem totam porro provident fugiat ab cumque quod, ipsam necessitatibus aperiam, eaque voluptas rem tenetur maxime.
+            </section>
         </div>
 
     </main>
